# avl2cad

./: .gitignore  LICENSE  README.md  airfoil.py  avl2step  avl_parser.py  avl_to_scad.py  geometry.py  loft_two_airfoils.py  pyproject.toml  supra.avl
examples/supra copy/: RUN.sh
src/avl2step/: __init__.py  airfoil.py  avl_parser.py  cli.py  converter.py  geometry.py
tests/: README.md  run_all_tests.sh
tests/TEST_airfoil_spline/: airfoil_spline_cq.py  test.stl
tests/TEST_horizontal_surface/: README.md  TEST.py  horiz.avl
tests/TEST_vertical_surface/: TEST.py  vert.avl
